--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-/* :root {
-
-} */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
+:root {
+font-family: 'Open Sans', sans-serif;
+}
 
 a {
   text-decoration: none;
