--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,18 @@ body {
 
 }
 
+/* Header and Navbar Section */
+
 .header-images{
   max-width: 100%;
   height: auto;
+}
+
+.navbar{
+  position: fixed;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
 }
 
 
