--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,28 @@ body {
   max-width: 100%;
   height: auto;
 }
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Define the animation stages */
+@keyframes underline {
+  from {
+    width: 0%;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  to {
+    width: 100%;
   }
 }
+
+/* animation to navlinks */
+.nav-elements {
+  position: relative; 
+}
+
+.nav-elements:hover::after {
+  content: ""; 
+  position: absolute; 
+  bottom: -5px; 
+  left: 0; 
+  height: 1px;
+  background-color: #169086; 
+  animation: underline 0.5s ease-out; 
+}
+
