--- a/src/index.css
+++ b/src/index.css
@@ -37,13 +37,18 @@ body {
   position: relative; 
 }
 
-.nav-elements:hover::after {
+.nav-elements::after {
   content: ""; 
   position: absolute; 
   bottom: -5px; 
   left: 0; 
   height: 1px;
   background-color: #169086; 
-  animation: underline 0.5s ease-out; 
+  width: 0%;
+
 }
 
+.nav-elements:hover::after{
+  width: 100%;
+  animation: underline 0.5s ease-out forwards; 
+}
