--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,54 @@ body {
 
 /* Header and Navbar Section */
 
-.header-images{
-  max-width: 100%;
-  height: auto;
+.hero-container{
+  position: relative;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
+
+.home-img:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #c7a6c5;
+}
+
+.home-img{
+  position: relative;
+  width: 50%;
+  overflow: hidden;
+
+}
+.header-images{
+ object-fit: cover;
+ height: auto;
+ width: 100%;
+ opacity: 0.5;
+ transition:  opacity 0.3s ease-in-out ;
+
+}
+
+.overlay-text{
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform:  translate(20%, -50%);
+  color: #373737;
+  font-size: 30px;
+}
+.overlay-text h1,
+.overlay-text p {
+  margin: 0; 
+}
+
+
+
 /* Define the animation stages */
 @keyframes underline {
   from {
@@ -33,8 +77,10 @@ body {
 }
 
 /* animation to navlinks */
+
 .nav-elements {
   position: relative; 
+  font-size: larger;
 }
 
 .nav-elements::after {
