--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   position: relative;
   background-color: #373737;
   padding: 100px 0;
+  width: 100vw;
 }
 
 .overlay-text {
@@ -50,11 +51,13 @@ body {
 }
 
 .overlay-text h1 {
-  font-size: 4rem;
+  font-size: 5rem;
+  font-weight: 200;
 }
 
 .overlay-text p {
-  font-size: 1.5rem
+  font-size: 1.5rem;
+  font-weight: 200;
 }
 
 .header-images {
