--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, html {
   margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 /* Header and Navbar Section */
 .navbar {
-  color: '#373737';
+  color: #373737;
   font-weight: 300;
 }
 
@@ -38,7 +40,6 @@ body {
   position: relative;
   background-color: #373737;
   padding: 100px 0;
-  width: 100vw;
 }
 
 .overlay-text {
