--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.main-container{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 a {
   text-decoration: none;
   margin: 10px;
@@ -68,6 +74,8 @@ body, html {
   height: auto;
   margin-left: auto;
   margin-right: auto;
+  transform: translate(200px);
+  z-index: 0;
 }
 
 .svg-decoration {
@@ -81,6 +89,7 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.7;
+  transform: translate(100px);
   z-index: 0;
 }
 
