--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ a {
 .hero-section {
   position: relative;
   background-color: #373737;
-  padding: 100px 0;
+  padding: 5vw;
 }
 
 .overlay-text {
@@ -50,23 +50,22 @@ a {
 }
 
 .overlay-text h1 {
-  font-size: 5rem;
+  font-size: 8vw;
   font-weight: 200;
 }
 
 .overlay-text p {
-  font-size: 1.5rem;
+  font-size: 3vw;
   font-weight: 200;
 }
 
 .header-images {
   position: block;
-  width: 400px;
-  max-width: 100%;
+  width: 50vw;
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  transform: translate(200px);
+  transform: translate(20vw);
   z-index: 0;
 }
 
@@ -77,11 +76,11 @@ a {
   width: 100%;
   height: 100%;
   background-image: url("./assets/hero.svg");
-  background-size: contain;
+  background-size: "contain";
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.7;
-  transform: translate(100px);
+  transform: translate(10vw);
   z-index: 0;
 }
 
@@ -92,8 +91,20 @@ a {
     /* Center the text horizontally on small screens */
     transform: translate(-50%, -50%);
     text-align: center;
-    /* Align the text to the center */
+    width: 80%;
+    word-break: break-word;
   }
+    .header-images{
+      width: 80vw;
+      transform:none;
+      object-fit: cover;
+    }
+
+    .svg-decoration{
+      transform: none;
+    }
+    
+  
 }
 
 
