--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ a {
 
 /* Media query for mobile responsiveness */
 @media (max-width: 768px) {
+  .hero-section {
+    height: 50vh;
+  }
+  
   .overlay-text {
     left: 50%;
     /* Center the text horizontally on small screens */
@@ -95,13 +99,12 @@ a {
     word-break: break-word;
   }
     .header-images{
-      width: 80vw;
-      transform:none;
-      object-fit: cover;
+     display: none;
     }
 
     .svg-decoration{
       transform: none;
+      opacity: 0.6;
     }
     
   
