--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,700;1,100;1,200;1,300&display=swap');
 
-:root {
-  font-family: 'Poppins', sans-serif;
-}
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 
 .main-container{
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -20,7 +19,6 @@ a {
   text-decoration: none;
   margin: 10px;
 }
-
 
 
 /* Header and Navbar Section */
