--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,8 @@ body {
 
 .main-container{
   min-height: 100vh;
-  min-width: 100vw;
   display: flex;
   flex-direction: column;
-  margin: 0;
 }
 
 a {
@@ -29,6 +27,9 @@ a {
 
 /* Page titles */
 .hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 4rem 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
@@ -153,4 +154,8 @@ a {
 .nav-elements:hover::after {
   width: 100%;
   animation: underline 0.5s ease-out forwards;
+}
+
+.footer{
+width: 100vw;
 }
