--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4rem 0;
+  margin: 3rem 0 1rem 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
   color: #373737;
