--- a/src/index.css
+++ b/src/index.css
@@ -70,14 +70,20 @@ a {
   margin-top: 0.5rem;
 }
 
+.header-images-container {
+  position: relative;
+  display: inline-block;
+}
+
 .header-images {
-  position: block;
   width: 50vw;
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  transform: translate(20vw);
+  transform: translate(35vw);
   z-index: 0;
+  position: relative;
+
 }
 
 .svg-decoration {
@@ -86,13 +92,24 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./assets/hero.svg");
+  background-image: url("./assets/hero1.svg");
   background-size: "contain";
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.7;
   transform: translate(10vw);
   z-index: 0;
+}
+
+.header-images-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(114, 5, 114, 0.277); /* Adjust the opacity to control the overlay intensity */
+  z-index: -1;
 }
 
 /* Media query for mobile responsiveness */
