--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ a {
   font-weight: 300;
   color: #373737;
   font-size: 30px;
+  height: 60vh
 }
 
 /* Hero Section for HomePage */
@@ -47,6 +48,7 @@ a {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 4rem;
+ 
 }
 
 .overlay-text {
