--- a/src/index.css
+++ b/src/index.css
@@ -49,12 +49,39 @@ a {
  
 }
 
+.hero-container{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.svg-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  z-index: 1; 
+}
+
+.hero-svg {
+  width: 50%; 
+  object-fit: cover; 
+}
+
+
+/* Center Hero text/buttons */
 .overlay-text {
   position: absolute;
   top: 50%;
   left: 10%;
   transform: translateY(-50%);
   color: #fff;
+  align-items: center;
   z-index: 1;
 }
 
@@ -70,72 +97,67 @@ a {
   margin-top: 0.5rem;
 }
 
-.header-images-container {
-  position: relative;
-  display: inline-block;
-}
+/* github and resume buttons */
+
 
 .header-images {
   width: 50vw;
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  transform: translate(35vw);
+  transform: translate(15vw);
   z-index: 0;
   position: relative;
 
 }
 
-.svg-decoration {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("./assets/hero1.svg");
-  background-size: "contain";
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.7;
-  transform: translate(10vw);
-  z-index: 0;
-}
 
-.header-images-container::before {
+.header-images-container img ::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   background-color: rgba(114, 5, 114, 0.277); /* Adjust the opacity to control the overlay intensity */
-  z-index: -1;
+  z-index: 9;
 }
 
 /* Media query for mobile responsiveness */
 @media (max-width: 768px) {
   .hero-section {
-    height: 50vh;
+    height: 40vh;
     padding: 0;
+    position: relative;
+    overflow: hidden;
   }
   
   .overlay-text {
-    left: 50%;
-    /* Center the text horizontally on small screens */
-    transform: translateX(-50%) translateY(-50%);
     text-align: center;
-    width: 90%;
-    word-break: break-word;
+    z-index: 1;
+    position: absolute;
+    top: 100%;
+    left:50%;
+    transform: translate(-50%, 50%);
+    width: 90%
   }
     .header-images{
      display: none;
     }
 
-    .svg-decoration{
-      transform: none;
+    .svg-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       opacity: 0.6;
+      z-index: 1;
     }
-    
+
+    .hero-svg{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   
 }
 
