--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,700;1,100;1,200;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,700;1,100;1,200;1,300&display=swap");
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.main-container{
+.main-container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,6 @@ a {
   margin: 10px;
 }
 
-
 /* Header and Navbar Section */
 .navbar {
   color: #373737;
@@ -26,141 +25,132 @@ a {
 
 /* Page titles */
 .hero {
-  display: flex;
   justify-content: center;
   align-items: center;
   margin: 3rem 0 1rem 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   color: #373737;
   font-size: 30px;
 }
 
 /* Hero Section for HomePage */
-
 .hero-section {
   position: relative;
   background-color: #373737;
-  padding: 5vw;
-  width: 100vw;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 4rem;
- 
+  z-index: 0;
 }
 
-.hero-container{
-  position: relative;
+.hero-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  text-align: center;
+  align-items: center;
+  height: 50%;
+  position: relative;
+  padding: 2rem;
 }
-
-.svg-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.7;
-  z-index: 1; 
-}
-
-.hero-svg {
-  width: 50%; 
-  object-fit: cover; 
-}
-
 
 /* Center Hero text/buttons */
 .overlay-text {
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  transform: translateY(-50%);
-  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  z-index: 1;
+  color: #fff;
+  padding: 2rem;
+  left: 30px;
+  z-index: 2;
+  position: absolute;
+  border: 1px solid #fff;
 }
 
-.overlay-text h1 {
-  font-size: 8vw;
-  font-weight: 200;
-  margin-bottom: 0.5rem;
+.overlay-text h4 {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
 }
 
 .overlay-text p {
-  font-size: 3vw;
+  font-size: 2vw;
   font-weight: 200;
   margin-top: 0.5rem;
 }
 
-/* github and resume buttons */
-
-
-.header-images {
-  width: 50vw;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  transform: translate(15vw);
-  z-index: 0;
+/* Header image with color effect */
+.image {
+  width: 800px;
+  height: 600px;
   position: relative;
-
+  z-index: -1;
+  right: -30px;
 }
 
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-.header-images-container img ::before {
-  content: "";
+.image-overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(114, 5, 114, 0.277); /* Adjust the opacity to control the overlay intensity */
-  z-index: 9;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(208, 206, 39, 0.5536589635854341) 0%,
+    rgba(199, 166, 197, 0.4948354341736695) 59%
+  );
+  z-index: 1;
 }
 
 /* Media query for mobile responsiveness */
 @media (max-width: 768px) {
   .hero-section {
-    height: 40vh;
-    padding: 0;
+    height: 50vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     position: relative;
-    overflow: hidden;
+    background-image: url(../src/assets/color2.jpg);
   }
-  
+
+  .image {
+    display: none;
+  }
+
   .overlay-text {
     text-align: center;
-    z-index: 1;
     position: absolute;
-    top: 100%;
-    left:50%;
-    transform: translate(-50%, 50%);
-    width: 90%
+    border: none;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    z-index: 2;
+    width: max-content;
   }
-    .header-images{
-     display: none;
-    }
 
-    .svg-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.6;
-      z-index: 1;
-    }
+  .overlay-text h4 {
+    font-size: 7vh;
+  }
 
-    .hero-svg{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
+  .overlay-text p {
+    font-size: 4vw;
+  }
+
+  .hero-section::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(208, 206, 39, 0.5536589635854341) 0%,
+      rgba(199, 166, 197, 0.4948354341736695) 59%
+    );
+    z-index: 1;
+  }
 }
-
 
 /* Define the animation stages */
 @keyframes underline {
@@ -186,9 +176,8 @@ a {
   bottom: -5px;
   left: 0;
   height: 1px;
-  background-color: #D0CE27;
+  background-color: #d0ce27;
   width: 0%;
-
 }
 
 .nav-elements:hover::after {
@@ -196,6 +185,6 @@ a {
   animation: underline 0.5s ease-out forwards;
 }
 
-.footer{
-width: 100vw;
+.footer {
+  width: 100vw;
 }
