--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,19 @@ a {
   position: relative;
   background-color: #373737;
   z-index: 0;
-}
-
-.hero-container {
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50%;
+}
+
+.hero-container {
+  height: 500px;
   position: relative;
-  padding: 2rem;
+  padding: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Center Hero text/buttons */
@@ -55,10 +59,10 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+
   color: #fff;
   padding: 2rem;
-  left: 30px;
+  left: 5px;
   z-index: 2;
   position: absolute;
   border: 1px solid #fff;
@@ -78,11 +82,14 @@ a {
 
 /* Header image with color effect */
 .image {
-  width: 800px;
-  height: 600px;
+  width: 100%; 
+  height: 100%; 
+  background-size: contain; 
+  background-repeat: no-repeat;
+  background-position: center;
   position: relative;
   z-index: -1;
-  right: -30px;
+  right: -200px;
 }
 
 .image img {
@@ -120,9 +127,11 @@ a {
 
   .overlay-text {
     text-align: center;
+    display: flex;
+    align-items: center;
     position: absolute;
     border: none;
-    top: 70%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
